# crewai

augmented_llms/: Tools_notebook.ipynb
crew_agent_task/pana_flow/: .env  pyproject.toml
crew_agent_task/pana_flow/src/pana_flow/: __init__.py  main.py
crew_agent_task/pana_flow/src/pana_flow/crews/teaching_crew/: teaching_crew.py
crew_agent_task/pana_flow/src/pana_flow/crews/teaching_crew/config/: agents.yaml  tasks.yaml
deployment/hello_flow/: poem.txt  pyproject.toml
deployment/hello_flow/src/hello_flow/: main.py
knowledge5/: pyproject.toml
knowledge5/src/knowledge5/: main1.py  main2.py
lawyer_support_agent_for_legal_queries/: .env  README.md  pyproject.toml
lawyer_support_agent_for_legal_queries/src/lawyer_support_agent_for_legal_queries/: crew.py  main.py
lawyer_support_agent_for_legal_queries/src/lawyer_support_agent_for_legal_queries/config/: agents.yaml  tasks.yaml
litellm1/: poem.txt  pyproject.toml
litellm1/src/litellm1/: main2.py
multiple_agents/: poem.txt
multiple_agents/src/multiple_agents/: main1.py
multiple_agents/src/multiple_agents/crews/dev_crew/: dev_crew.py  dev_crew1.py
multiple_agents/src/multiple_agents/crews/dev_crew/config/: agents.yaml  tasks.yaml
multiple_agents_with_two_llms_2/: pyproject.toml
multiple_agents_with_two_llms_2/src/multiple_agents/crews/dev_crew/: dev_crew.py
multiple_agents_with_two_llms_2/src/multiple_agents/crews/dev_crew/config/: agents.yaml  tasks.yaml
planning/: Crewai_planning.ipynb
testing/: testing_crew.ipynb
training/: training_crew.ipynb
