[project]
name = "litellm1"
version = "0.1.0"
description = "litellm1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
    "ollama>=0.4.7",
]

[project.scripts]
simple_flow = "litellm1.main2:run_litellm_flow"
plot = "litellm1.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
