[project]
name = "pana-flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Abdulqadir8", email = "aq98123@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
kickoff_flow = "pana_flow.main:kickoff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
